# synapse

./: CMakeLists.txt  compress_jpeg.cpp  console_app.cpp  display_img.cpp  file_mngmt.cpp  functions.h  graph.html  graph.py  images.db  open_img.cpp  run_flask.bat  search_app.py  smooth_edges.cpp  sqlite.cpp
